# osiris

./: Cargo.toml  Containerfile  README.md
.github/workflows/: container.yml  rust.yml  schedule.yml
src/: binance_fetcher.rs  catchup.rs  main.rs  opt.rs  trader.rs
src/opt/: serve.rs
src/trader/: request.rs  response.rs
