[package]
name = "osiris"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# this is way too complicated, the features in the penumbra crates need to be fixed
[features]
default = ["std", "parallel"]
std = ["ark-ff/std"]
parallel = ["penumbra-wallet/parallel", "penumbra-crypto/parallel"]

[dependencies]
# Penumbra dependencies
penumbra-proto = { path = "../penumbra/crates/proto" }
penumbra-crypto = { path = "../penumbra/crates/core/crypto" }
penumbra-custody = { path = "../penumbra/crates/custody" }
penumbra-view = { path = "../penumbra/crates/view" }
penumbra-wallet= { path = "../penumbra/crates/wallet" }
penumbra-transaction = { path = "../penumbra/crates/core/transaction", features = ["download-proving-keys"] }

# External dependencies
ark-ff = "0.3"
ark-serialize = "0.3"
anyhow = "1"
directories = "4.0.1"
lazy_static = "1.4.0"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1.25", features = ["full"] }
clap = { version = "3", features = ["derive"] }
serde_json = "1"
futures = "0.3"
derivative = "2"
rand = "0.8"
reqwest = "0.11"
indexmap = "1.8"
chrono = { version = "0.4", features = ["serde"] }
tonic = { version = "0.8.1", features = ["tls-webpki-roots", "tls"] }
serde = { version = "1", features = ["derive"]}
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
url = "2"

# External dependencies
tendermint-config = "0.24.0-pre.1"
# These are = dependencies to force the whole workspace's dependency tree to go
# back onto 0.24.0-pre.1, which, unlike 0.24.0-pre.2, doesn't have
# ecosystem-incompatible breaking changes to the prost version.
#
# Longer-term, we can't rely on the upstream to publish versions, so we should plan
# to fork the crates and maintain our fork.
tendermint-proto = "=0.24.0-pre.1"
tendermint = "=0.24.0-pre.1"
# We don't need this crate at all, but its upstream published a breaking change as
# 0.7.1 (also prost-related), and depending on an exact version here will exclude
# the bad update until it's yanked.
ics23 = "=0.7.0"
