[package]
name = "osiris"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]

[dependencies]
# Penumbra dependencies
penumbra-proto = { path = "../penumbra/crates/proto" }
penumbra-asset = { path = "../penumbra/crates/core/asset" }
penumbra-num = { path = "../penumbra/crates/core/num" }
penumbra-fee = { path = "../penumbra/crates/core/component/fee" }
penumbra-keys = { path = "../penumbra/crates/core/keys" }
penumbra-dex = { path = "../penumbra/crates/core/component/dex" }
penumbra-custody = { path = "../penumbra/crates/custody" }
penumbra-view = { path = "../penumbra/crates/view" }
penumbra-transaction = { path = "../penumbra/crates/core/transaction", features = [
    "download-proving-keys",
] }

# External dependencies
anyhow = "1"
directories = "4.0.1"
lazy_static = "1.4.0"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1.25", features = ["full"] }
clap = { version = "3", features = ["derive"] }
serde_json = "1"
futures = "0.3"
derivative = "2"
rand = "0.8"
reqwest = "0.11"
indexmap = "1.8"
chrono = { version = "0.4", features = ["serde"] }
tonic = { version = "0.10", features = ["tls-webpki-roots", "tls"] }
serde = { version = "1", features = ["derive"] }
# The commit `17ba6f3cedec7f5908e4cc2b3c39f61a778df2ec` from 2023-12-03 broke compilation,
# so we pin the prior git revision.
# binance = { git = "https://github.com/wisespace-io/binance-rs.git", rev = "17ba6f3cedec7f5908e4cc2b3c39f61a778df2ec" }
binance = { git = "https://github.com/wisespace-io/binance-rs.git", rev = "3017e136cc4439c9b6a67fdccb76a7c3a94f8440" }
url = "2"
